style.css
:root {
    --sidebar-blue: rgba(25, 146, 212, 1);
    --background-grey: rgba(226,232,240,1);
    --transition-time: 200ms;
    --white: #fffbfb;
    --grey: #f0eef1;
    --black: #050505;
    --red: #ff7070;
    --light-green: #9fff9c;
    --light-red: #ff9c9c;
    --unread-background-color: rgba(220, 153, 153, 1);
    --unread-background-color-strong: rgba(250, 170, 170, 1);
    --read-background-color: rgba(153, 220, 153, 1);
    --read-background-color-strong: rgba(170, 250, 170, 1);

}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 20px;
    font-weight: 500;
    font-family: 'Roboto', sans-serif;
    transition: all var(--transition-time) ease-in-out;
}

body {
    display: grid;
    grid-template-rows: 20% fit-content;
    width: min(100%);
    height: min(fit-content, 100%);
    overflow:auto;
    padding-bottom: 0;
    display: grid;
    grid-template-rows: 20vh minmax(70vh, fit-content);
}

.form-background {
    opacity: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.4);
    transition: all 300ms ease-in-out;
    pointer-events: none;
}
.form-wrapper {
    opacity: 0;
    padding: 3% 3%;
    pointer-events: none;
    width: 30vw;
    height: 60vh;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(255,155,0,1);
    border-radius: 10px;
    border: 1px solid rgba(0,0,0,0.4);
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;

}
#addBook-form {
    width:100%;
    height:100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

#addBook-form ::placeholder{
    font-size: 16px;
    opacity: 0.8;
    padding-left: 3px;
}

#addBook-form span {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
}

#addBook-form label[for='wasRead'] {
    display:flex;
    gap: 50px;
    
}
#addBook-form input[type="checkbox"] {
    transform: scale(2.5);
    transition: all 0.2s ease-in-out;
    cursor: pointer;
}

#addBook-form button[type=submit] {
    border: 1px solid black;
    border-radius: 10px;
    padding: 5px 4px;
    font-weight: 400;
    background-color: white;
}

#addBook-form button[type=submit]:hover {
    background-color: rgba(0,0,0, 0.7);
    color: white;
    transform: scale(1.05)
}

#addBook-form button[type=submit]:active {
    background-color: white;
    color: black;
    transform: scale(0.95)
}

.active {
    opacity: 1;
    pointer-events:all;
}



button {
    border: none;
    outline: none;
    border-style: none;
    background: none;
    border-radius: 10%;
    cursor: pointer;
}

.headerTitle {
    font-size: 36px;
    font-weight: bold;
    margin-right: -235px;
}
.plus-btn {
    font-size: 60px;
    font-weight: 200;
    width: 60px;
    height: 70px;
    align-self: center;
    text-align: center;
}

.plus-btn:hover {
    transform: scale(1.1);
}

.log-in-btn {
    padding: 5px 10px
}
    
button:hover {
    background-color: rgba(0,0,0,0.2);
}   
button:active {
    background-color: rgba(0,0,0,0.5);
}

.header {
    background-color: orange;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 15px 25px;
    align-items: center;
    grid-row: 1/1;
}
.main {
    display: grid;
    gap: 10px;
    padding: 20px 40px;
    overflow: hidden;
    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
}

.book-card {
    display:grid;
    border: 1px solid rgba(0,0,0,0.1);
    background-color: var(--unread-background-color);
    height: 250px;
    grid-template-rows: 2fr 2fr 3fr;
    text-align: center;
    transition: all var(--transition-time) ease-in-out;
}

.book-card:hover {
    box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.5) 0px 0px 0px 1px;
    transform: scale(1.002);
    background-color: var(--unread-background-color-strong);
}
.book-card.read:hover {
    background-color: var(--read-background-color-strong);
}


.book-card .title {
    padding-top: 40px;
}

.book-card .title::before {
    content: '"';
}
.book-card .title::after {
    content: '"';
}

.book-card .author::before {
    content:'by ';
}

.book-card .author {
    padding-top: 15px;
    font-size: 16px;
    font-weight: 400;
}

.read {
    background-color: var(--read-background-color);
}

.read .toggle-read-btn {
    background-color: var(--read-background-color);
}

.wasRead-display::before {
    content: 'un';
}
    
.read .wasRead-display::before {
    content:'';
}

.toggle-read-btn {
    display:flex;
    justify-content: center;
    align-items: center;
    border-radius: 0;
    background-color: var(--unread-background-color);
}
.toggle-read-btn * {
    pointer-events: none;
}

.delete-book-btn {
    background-color: rgba(0,0,0,0.07);
    border-radius: 0;
    transition: transform 1000ms ease;
}

.delete-book-btn.clicked{
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
    background-color: rgba(230,20,20,0.8);
}

.delete-book-btn * {
    pointer-events: none;
    transition: transform var(--transition-time) ease;
}
.delete-book-btn.clicked span {
    transform: scale(1.50)
}


.card-buttons {
    display: grid;
    grid-template-columns: 1fr 1fr;
    background: var(--background-grey);
}



.card-buttons button:not(.delete-book-btn):hover {
    background: rgba(0,0,0,0.2);
    border-radius: 0;
}

.hidden {
    opacity: 0;
}

.footer {
    background-color: lightcoral;
    width: 100%;    
    bottom: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    grid-row: 3;
}

.footer button:hover {
    background: none;
    transform: scale(1.2);
}

img {
    width: 30px;
    height: auto;
}

